# EcosizerEngine

./: .gitignore  16_19.csv  16_6.csv  23_18.csv  23_6.csv  24_18.csv  24_6.csv  BuildingCreator.py  CLAUDE.md  Dockerfile  Ecolator.py  Ecolator.yml  EcosizerEngine.py  EcosizerEngine.yml  HPWHulator.py  MANIFEST.in  MPRTP_runs.py  README.md  SystemCreator.py  compare_sizing.py  demo_3day_sim.py  demo_swing_er.py  demo_undersized.py  input.csv  madison_test.py  nolan_test.py  pyproject.toml  requirements.txt  run_simulation.py  setup.cfg  sim_script.py  utils.py
.github/workflows/: python-publish.yml
constants/: Constants.py
data/load_shapes/: elementary_school.json  food_service_a.json  womens_dorm.json
docs/: Makefile  conf.py  index.rst  make.bat  quickstart.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
docs/api/: dhwsystems.rst  index.rst  simulation.rst
engine/: BuildingCreator.py  EcosizerEngine.py  SystemCreator.py
objects/: Building.py  SystemConfig.py  systemConfigUtils.py
objects/systems/: ParallelLoopTank.py  SwingTank.py
src/ecoengine/: __init__.py
src/ecoengine/constants/: Constants.py  constants.py
src/ecoengine/engine/: BuildingCreator.py  EcosizerEngine.py  Simulator.py  SystemCreator.py  __init__.py
src/ecoengine/interfaces/: EcosizerEngine.py  Simulator.py
src/ecoengine/objects/: Building.py  PrefMapTracker.py  SimulationRun.py  SystemConfig.py  UtilityCostTracker.py  __init__.py  systemConfigUtils.py
src/ecoengine/tests/: secret_t_est_all_maps.py  test_buildings.py  test_dhw_system.py  test_engine.py  test_mixing_valve.py  test_perfMaps.py  test_performance_map.py  test_storage_tanks.py  test_systems.py  test_utilityTracker.py  test_utility_cost_tracker.py
src/ecosizer_engine_package/constants/: Constants.py
src/ecosizer_engine_package/engine/: BuildingCreator.py  EcosizerEngine.py  SystemCreator.py
src/ecosizer_engine_package/objects/: Building.py  SystemConfig.py  __init__.py  systemConfigUtils.py
tests/: test_buildings.py  test_engine.py  test_systems.py  test_ulator.py
(+314 files in other folders)
