[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ecoengine"
version = "3.0.0"
requires-python = ">=3.11"
dependencies = ["numpy", "scipy"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["src/ecoengine/tests"]
