[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ecoengine"
version = "3.0.1"
requires-python = ">=3.11"
dependencies = ["numpy", "scipy", "plotly"]

[project.optional-dependencies]
docs = ["sphinx>=6", "furo"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ecoengine.data.climate_data" = ["*.csv"]
"ecoengine.data.load_shapes" = ["*.json"]
"ecoengine.data.preformanceMaps" = ["*.json"]
"ecoengine.data.preformanceMaps.pkls" = ["*.pkl"]

[tool.pytest.ini_options]
testpaths = ["src/ecoengine/tests"]
