[metadata]
name = ecoengine
version = 1.0.17
author = Nolan
author_email = nolan@ecotope.com
description = A software for sizing Heat Pump Water Heaters for buildings
long_description = file: README.md
long_description_content_type = text/markdown
url = https://ecosizer.ecotope.com/sizer/
project_urls =
    Docs = https://ecosizer.ecotope.com/sizer/docs/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent

[options]
package_dir =
    = src
include_package_data = True
packages = find:
python_requires = >=3.11
install_requires =
    scipy
    numpy
    plotly
    pytest 

[options.packages.find]
where = src